<?xml version="1.0" encoding="UTF-8"?>
<project xmlns="http://maven.apache.org/POM/4.0.0" xmlns:xsi="http://www.w3.org/2001/XMLSchema-instance"
         xsi:schemaLocation="http://maven.apache.org/POM/4.0.0 http://maven.apache.org/xsd/maven-4.0.0.xsd">
  <modelVersion>4.0.0</modelVersion>
<!-- Copyright CESSDA ERIC 2017-2019 -->
<!-- Licensed under the Apache License, Version 2.0 (the "License"); you may not  -->
<!--  use this file except in compliance with the License.  -->
<!-- You may obtain a copy of the License at  -->
<!-- http://www.apache.org/licenses/LICENSE-2.0  -->
<!-- Unless required by applicable law or agreed to in writing, software  -->
<!-- distributed under the License is distributed on an "AS IS" BASIS,  -->
<!-- WITHOUT WARRANTIES OR CONDITIONS OF ANY KIND, either express or implied.  -->
<!-- See the License for the specific language governing permissions and  -->
<!-- limitations under the License.  -->
  <groupId>eu.cessda.pasc</groupId>
  <artifactId>pasc-oci</artifactId>
	<version>${revision}</version>
  <packaging>jar</packaging>

  <name>CESSDA Data Catalogue OSMH Indexer</name>
  <description>Cessda CDC OSMH harvester</description>

  <parent>
    <groupId>org.springframework.boot</groupId>
    <artifactId>spring-boot-starter-parent</artifactId>
    <version>1.5.9.RELEASE</version>
    <relativePath/> <!-- lookup parent from repository -->
  </parent>

  <properties>
    <baseRevision>2.1</baseRevision>
    <buildRevision>-SNAPSHOT</buildRevision>
    <revision>${baseRevision}${buildRevision}</revision>
    <project.build.sourceEncoding>UTF-8</project.build.sourceEncoding>
    <project.reporting.outputEncoding>UTF-8</project.reporting.outputEncoding>
    <java.version>11</java.version>
    <maven.compiler.target>${java.version}</maven.compiler.target>
    <maven.compiler.source>${java.version}</maven.compiler.source>
    <springfox-version>2.6.1</springfox-version>
    <!--Sonar Pros: starts-->
    <sonar-maven-plugin.version>3.6.0.1398</sonar-maven-plugin.version>
    <sonar.dynamicAnalysis>reuseReports</sonar.dynamicAnalysis>
    <sonar.core.codeCoveragePlugin>jacoco</sonar.core.codeCoveragePlugin>
    <sonar.coverage.jacoco.xmlReportPaths>${project.build.directory}/site/jacoco/jacoco.xml</sonar.coverage.jacoco.xmlReportPaths>
    <jacoco-maven-plugin.version>0.8.3</jacoco-maven-plugin.version>
    <sonar.exclusions>**/models/**</sonar.exclusions>
    <sonar.links.scm>https://bitbucket.org/cessda/cessda.cdc.osmh-indexer.cmm</sonar.links.scm>
      <!-- following repos are not public
    <sonar.links.issue>https://bitbucket.org/cessda/cessda.cdc.version2/issues</sonar.links.issue>
    <sonar.links.homepage>https://bitbucket.org/cessda/cessda.cdc.version2/wiki/Home</sonar.links.homepage>
      -->
    <sonar.links.ci>https://jenkins.cessda.eu/</sonar.links.ci>
    <!--Sonar Pros: ends-->
    <lombok.version>1.18.6</lombok.version>
    <httpclient.version>4.5.4</httpclient.version>
    <commons-cli.version>1.4</commons-cli.version>
    <commons-io.version>1.3.2</commons-io.version>
    <spring-boot-admin-starter-client.version>1.4.5</spring-boot-admin-starter-client.version>
    <hamcrest-all.version>1.3</hamcrest-all.version>
  </properties>

  <dependencies>

    <!-- Core Spring-->
    <dependency>
      <groupId>org.springframework.boot</groupId>
      <artifactId>spring-boot-starter</artifactId>
    </dependency>
    <dependency>
      <groupId>org.springframework.boot</groupId>
      <artifactId>spring-boot-configuration-processor</artifactId>
      <optional>true</optional>
    </dependency>
    <dependency>
      <groupId>org.springframework.boot</groupId>
      <artifactId>spring-boot-devtools</artifactId>
    </dependency>
    <dependency>
      <groupId>org.springframework.boot</groupId>
      <artifactId>spring-boot-starter-data-elasticsearch</artifactId>
    </dependency>

    <!-- Spring boot Admin-->
    <dependency>
      <groupId>org.springframework.boot</groupId>
      <artifactId>spring-boot-starter-security</artifactId>
    </dependency>
    <dependency>
      <groupId>org.springframework</groupId>
      <artifactId>spring-context-support</artifactId>
    </dependency>
    <dependency>
      <groupId>ch.qos.logback</groupId>
      <artifactId>logback-classic</artifactId>
    </dependency>
    <dependency>
      <groupId>org.jolokia</groupId>
      <artifactId>jolokia-core</artifactId>
    </dependency>
    <dependency>
      <groupId>org.springframework.cloud</groupId>
      <artifactId>spring-cloud-starter</artifactId>
    </dependency>

    <!--Utils -->
    <dependency>
      <groupId>org.apache.httpcomponents</groupId>
      <artifactId>httpclient</artifactId>
      <version>${httpclient.version}</version>
    </dependency>
    <dependency>
      <groupId>org.projectlombok</groupId>
      <artifactId>lombok</artifactId>
      <version>${lombok.version}</version>
      <scope>provided</scope>
    </dependency>
    <dependency>
      <groupId>org.ehcache</groupId>
      <artifactId>ehcache</artifactId>
    </dependency>
    <dependency>
      <groupId>org.json</groupId>
      <artifactId>json</artifactId>
      <version>20180813</version>
    </dependency>
    <dependency>
      <groupId>com.fasterxml.jackson.dataformat</groupId>
      <artifactId>jackson-dataformat-xml</artifactId>
      <version>2.9.8</version>
    </dependency>
    <dependency>
      <groupId>com.fasterxml.jackson.core</groupId>
      <artifactId>jackson-core</artifactId>
      <version>2.9.8</version>
    </dependency>
    <dependency>
      <groupId>commons-cli</groupId>
      <artifactId>commons-cli</artifactId>
      <version>${commons-cli.version}</version>
    </dependency>
    <dependency>
      <groupId>org.apache.commons</groupId>
      <artifactId>commons-io</artifactId>
      <version>${commons-io.version}</version>
    </dependency>

    <dependency>
      <groupId>de.codecentric</groupId>
      <artifactId>spring-boot-admin-starter-client</artifactId>
      <version>${spring-boot-admin-starter-client.version}</version>
    </dependency>

    <!-- Test -->
    <dependency>
      <groupId>org.springframework.boot</groupId>
      <artifactId>spring-boot-starter-test</artifactId>
      <scope>test</scope>
    </dependency>
    <dependency>
      <groupId>org.hamcrest</groupId>
      <artifactId>hamcrest-all</artifactId>
      <version>${hamcrest-all.version}</version>
      <scope>test</scope>
    </dependency>
    <!--Runtime, for Embedded Elasticsearch Engine-->
    <dependency>
      <groupId>net.java.dev.jna</groupId>
      <artifactId>jna</artifactId>
      <scope>test</scope>
    </dependency>
  </dependencies>

  <dependencyManagement>
    <dependencies>
      <dependency>
        <groupId>org.springframework.cloud</groupId>
        <artifactId>spring-cloud-dependencies</artifactId>
        <version>Camden.SR5</version>
        <type>pom</type>
        <scope>import</scope>
      </dependency>
    </dependencies>
  </dependencyManagement>

  <distributionManagement>
    <repository>
      <id>cessda-nexus</id>
      <name>CESSDA Nexus Repository</name>
      <url>https://nexus.cessda.eu/repository/maven-releases</url>
    </repository>
    <snapshotRepository>
      <id>cessda-nexus-snapshot</id>
      <name>CESSDA Nexus Snapshot Repository</name>
      <url>https://nexus.cessda.eu/repository/maven-snapshots/</url>
      <uniqueVersion>true</uniqueVersion>
    </snapshotRepository>
  </distributionManagement>

  <build>
    <plugins>
      <plugin>
        <groupId>org.apache.maven.plugins</groupId>
        <artifactId>maven-compiler-plugin</artifactId>
        <version>3.8.0</version>
        <configuration>
          <source>${maven.compiler.source}</source>
          <target>${maven.compiler.target}</target>
          <compilerArgs>
            <arg>-Xlint:all</arg>
          </compilerArgs>
        </configuration>
      </plugin>
      <plugin>
        <groupId>org.springframework.boot</groupId>
        <artifactId>spring-boot-maven-plugin</artifactId>
        <executions>
          <execution>
            <goals>
              <goal>build-info</goal>
            </goals>
          </execution>
        </executions>
      </plugin>

      <plugin>
        <groupId>org.apache.maven.plugins</groupId>
        <artifactId>maven-surefire-plugin</artifactId>
        <configuration>
          <!--Extra memory to prevent jvm crash during heavy Integration/unit test-->
          <!--<argLine>-Xmx1024m -XX:MaxPermSize=256m</argLine>-->
          <!-- Exclude certain dependencies causing related transitive issues.-->
          <classpathDependencyExcludes>
            <classpathDependencyExclude>org.springframework.cloud:spring-cloud-context</classpathDependencyExclude>
          </classpathDependencyExcludes>
        </configuration>
      </plugin>

      <!-- Sonar Start -->
      <plugin>
        <groupId>org.sonarsource.scanner.maven</groupId>
        <artifactId>sonar-maven-plugin</artifactId>
        <version>${sonar-maven-plugin.version}</version>
      </plugin>
      <plugin>
        <groupId>org.jacoco</groupId>
        <artifactId>jacoco-maven-plugin</artifactId>
        <version>${jacoco-maven-plugin.version}</version>
        <executions>
          <execution>
            <goals>
              <goal>prepare-agent</goal>
            </goals>
          </execution>
          <execution>
            <id>report</id>
            <goals>
              <goal>report</goal>
            </goals>
        </execution>
        </executions>
      </plugin>
    </plugins>
  </build>
  <profiles>
    <profile>
      <id>jenkins</id>
      <activation>
        <property>
          <name>env.BUILD_NUMBER</name>
        </property>
      </activation>
      <properties>
        <buildRevision>.${env.BUILD_NUMBER}</buildRevision>
      </properties>
    </profile>
  </profiles>
</project>
